# hsc3-works

./: .gitignore  1.hs  2.hs  2c.hs  2r.hs  3.hs  Boot.hs  Main.hs  README.org  boot.sh  c1.hs  c2.hs  c3.hs  c4.hs  c5.hs  c6.hs  functions.hs  hsc3-works.cabal  kill.sh  m2.hs  m4.hs  shell.nix  stack.yaml
src/: Functions.hs  Main.hs  SynthDefs.hs  UGens.hs
src/SynthDefs/: C6.hs  C7.hs  C8.hs  Types.hs
src/Works/: C6.hs  C7.hs  C8.hs  C9.hs
works/: c1.hs  c2.hs  c3.hs  c4.hs  c5.hs  c6.hs  c7.hs  c8.hs  c9.hs
