name:                hsc3-works
version:             0.1.0.0
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable hsc3-works
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Functions, SynthDefs, UGens
  build-depends:       base >=4.8, process >=1.2, hsc3 >=0.15 && <0.16, hosc >=0.15 && <0.16
