name:                hsc3-works
version:             0.1.0.0
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
license:             MIT

executable hsc3-works
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Functions
                     , UGens
                     , SynthDefs.Types
                     , SynthDefs.C6
                     , SynthDefs.C7
                     , SynthDefs.C8
                     , SynthDefs.C10
  build-depends:       base >=4.8, process >=1.2, hsc3 >=0.16 && <0.17, hosc >=0.16 && <0.17
  ghc-options: -Wall -Werror
